# smart_controller_gateway

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
include/smart_controller_gateway/: gamepad_data.hpp  gamepad_module.hpp  network_data.hpp  network_module.hpp  smart_controller_gateway_node.hpp  smart_controller_network.hpp
launch/: demo.py
src/: gamepad_module.cpp  network_data_util.cpp  network_module.cpp  smart_controller_gateway_node.cpp
